@@ -19,6 +19,10 @@
     \itemize{
       \item Speedup of \code{getOption(*, <default>)} from \PR{17394},
       thanks to Matt Dowle.
+
+      \item \code{match.arg()} more carefully chooses the environment
+      for constucting default \code{choices}, fixing \PR{17401} as
+      proposed by Duncan Murdoch.
     }
   }
 }
